compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify8.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 795
expression: "fn main() { let x: #(x, x) = #(5, 5.0) x }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:30
  │
1 │ fn main() { let x: #(x, x) = #(5, 5.0) x }
  │                              ^^^^^^^^^

Expected type:

    #(a, a)

Found type:

    #(Int, Float)


